--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -81,28 +81,28 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	<header style="background:transparent;"> 
 		<span>Please click on each image for more info!</span>
 	</header>
-<img src="https://files.catbox.moe/lpi14k.png" onclick="openModal();currentSlide(1)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
+<img src="https://files.catbox.moe/lpi14k.png" onclick="openModal();currentSlide(1)" class="hover-shadow" height="400px" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/1h3enc.png" onclick="openModal();currentSlide(2)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/1h3enc.png" onclick="openModal();currentSlide(2)" class="hover-shadow" height="400px" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/oyolz0.png" onclick="openModal();currentSlide(3)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/oyolz0.png" onclick="openModal();currentSlide(3)" class="hover-shadow" height="400px" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/yocv3v.png" onclick="openModal();currentSlide(4)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/yocv3v.png" onclick="openModal();currentSlide(4)" class="hover-shadow" height="400px" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/r9hrw2.png" onclick="openModal();currentSlide(5)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/r9hrw2.png" onclick="openModal();currentSlide(5)" class="hover-shadow" height="400px" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/okn633.png" onclick="openModal();currentSlide(6)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/okn633.png" onclick="openModal();currentSlide(6)" class="hover-shadow" height="400px" style="object-fit:cover; float:left;">
 
 	
 	
 	
 <section id="dig" class="full">
   
-  <img src="https://files.catbox.moe/x3rq3n.png" onclick="openModal();currentSlide(7)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/x3rq3n.png" onclick="openModal();currentSlide(7)" class="hover-shadow" height="400px" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/j1pnr6.png" onclick="openModal();currentSlide(8)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/j1pnr6.png" onclick="openModal();currentSlide(8)" class="hover-shadow" height="400px" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/vcreqd.png"onclick="openModal();currentSlide(9)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/vcreqd.png"onclick="openModal();currentSlide(9)" class="hover-shadow" height="400px" style="object-fit:cover; float:left;">
 	
   <img src="" onclick="openModal();currentSlide(10)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
 
@@ -113,15 +113,15 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 
 <section id="dig" class="full">
   
-  <img src="https://files.catbox.moe/6wpk7d.png" onclick="openModal();currentSlide(11)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/6wpk7d.png" onclick="openModal();currentSlide(11)" class="hover-shadow" height="400px" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/chovay.png" onclick="openModal();currentSlide(12)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/chovay.png" onclick="openModal();currentSlide(12)" class="hover-shadow" height="400px" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/io9v9y.jpg" onclick="openModal();currentSlide(13)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/io9v9y.jpg" onclick="openModal();currentSlide(13)" class="hover-shadow" height="400px" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/ue8wu0.png" onclick="openModal();currentSlide(14)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/ue8wu0.png" onclick="openModal();currentSlide(14)" class="hover-shadow" height="400px" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/tynxvh.png" onclick="openModal();currentSlide(15)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/tynxvh.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="400px" style="object-fit:cover; float:left;">
 <p></p>
 	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR0nj8XT6Cs5YfnFi7_2OdAuyBB8dFZ8lQtlV167hunn2tvsFCyPKti9nlf9ESVoP07Q2e82aoTctRd/pubembed?start=true&loop=false&delayms=15000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 	
