--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -123,7 +123,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
   
   <img src="https://files.catbox.moe/tynxvh.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="400px" style="object-fit:cover; float:left;">
 <p></p>
-	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR0nj8XT6Cs5YfnFi7_2OdAuyBB8dFZ8lQtlV167hunn2tvsFCyPKti9nlf9ESVoP07Q2e82aoTctRd/pubembed?start=true&loop=false&delayms=15000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR0nj8XT6Cs5YfnFi7_2OdAuyBB8dFZ8lQtlV167hunn2tvsFCyPKti9nlf9ESVoP07Q2e82aoTctRd/pubembed?start=true&loop=false&delayms=15000" onclick="openModal();currentSlide(16)" frameborder="0" width="400" height="200" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 	
 	
 	 <h2>Vanya - 16" Bisque Doll</h2>
@@ -260,7 +260,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 <!-- KICKBACK -->
                     <div class="mySlides">
                         <div class="center">
-                            <img src="" style="width: 80%; position: relative;">
+                            	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR0nj8XT6Cs5YfnFi7_2OdAuyBB8dFZ8lQtlV167hunn2tvsFCyPKti9nlf9ESVoP07Q2e82aoTctRd/pubembed?start=true&loop=false&delayms=15000" frameborder="0" width="400" height="200" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" style="position: relative;"></iframe>
                             <p style="position: relative; bottom: 80px ;"></p>
                         </div>
                     </div>
