--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -102,9 +102,9 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	
   <img src="https://files.catbox.moe/j1pnr6.png" onclick="openModal();currentSlide(8)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/vcreqd.png"onclick="openModal();currentSlide(9)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/vcreqd.png" onclick="openModal();currentSlide(9)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
 	
-  <img src="" onclick="openModal();currentSlide(10)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
+<!--  <img src="" onclick="openModal();currentSlide(10)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;"> -->
 
 
 </section>
@@ -226,8 +226,8 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                         <div class="center">
                             <img src="https://files.catbox.moe/j1pnr6.png" style="width: 80%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"></p>
-                        </div
-                    <div class="mySlides">
+			</div>
+<!--                    <div class="mySlides">
                         <div class="center">
                             <img src="" style="width: 80%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"></p>
@@ -239,6 +239,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                             <p style="position: relative; bottom: 80px ;"></p>
                         </div>
                     </div>
+			    -->
 			
 <!-- CDP ASSIGNMENTS -->
                     <div class="mySlides">
@@ -260,18 +261,41 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 <!-- KICKBACK -->
                     <div class="mySlides">
                         <div class="center">
-                            	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR0nj8XT6Cs5YfnFi7_2OdAuyBB8dFZ8lQtlV167hunn2tvsFCyPKti9nlf9ESVoP07Q2e82aoTctRd/pubembed?start=true&loop=false&delayms=15000" frameborder="0" width="400" height="200" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" style="position: relative;"></iframe>
+                            <img src="https://files.catbox.moe/6wpk7d.png" style="width: 80%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"></p>
                         </div>
                     </div>
                     <div class="mySlides">
                         <div class="center">
-                            <img src="" style="width: 80%; position: relative;">
+                            <img src="https://files.catbox.moe/chovay.png" style="width: 80%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"></p>
                         </div>
                     </div>
-
-			
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="https://files.catbox.moe/io9v9y.jpg" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"></p>
+                        </div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="https://files.catbox.moe/ue8wu0.png" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"></p>
+                        </div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="https://files.catbox.moe/tynxvh.png" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"></p>
+                        </div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="center">
+                            	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR0nj8XT6Cs5YfnFi7_2OdAuyBB8dFZ8lQtlV167hunn2tvsFCyPKti9nlf9ESVoP07Q2e82aoTctRd/pubembed?start=true&loop=false&delayms=15000" frameborder="0" width="400" height="200" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" style="position: relative;"></iframe>
+                            <p style="position: relative; bottom: 80px ;"></p>
+                        </div>
+                    </div>
+			    
 <a class="prev" onclick="plusSlides(-1)">&#10094</a>
 <a class="next" onclick="plusSlides(1)">&#10095</a>
 
