--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -77,7 +77,18 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	
 
 	
-<section id="dig" class="full">
+<section id="publication" class="full">
+	<header style="background:transparent;"> 
+		<span>Please click on each image for more info!</span>
+	</header>
+			  <section STYLE="BACKGROUND:TRANSPARENT;">
+  <lis style="background-color: gradientTop;">
+		<div class="container" style="margin-left:auto; margin-right:auto; bottom:10px; outline:0px; border:0px; BACKGROUND:TRANSPARENT;" border="33333;">
+				<a href="#publication">Publication Design</a>
+				<a href="#posters" color="border">Poster Design</a>
+				<a href="#branding" color="border">Branding</a>
+		</div></lis></section>
+	
 	<header style="background:transparent;"> 
 		<span>Please click on each image for more info!</span>
 	</header>
@@ -95,8 +106,11 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 
 	
 	
-	
-<section id="dig" class="full">
+	<br>
+<section id="posters" class="full">
+	<header style="background:transparent;"> 
+		<span>Poster Design</span>
+	</header>
   
   <img src="https://files.catbox.moe/x3rq3n.png" onclick="openModal();currentSlide(7)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
 	
@@ -111,7 +125,11 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	
 		
 
-<section id="dig" class="full">
+	<br>
+<section id="branding" class="full">
+	<header style="background:transparent;"> 
+		<span>Branding</span>
+	</header>
   
   <img src="https://files.catbox.moe/6wpk7d.png" onclick="openModal();currentSlide(11)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
 	
