--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -104,7 +104,11 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	
   <img src="https://files.catbox.moe/okn633.png" onclick="openModal();currentSlide(6)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
 
-	
+</section>
+</div>
+
+	  
+<div class="container">
 	
 	<br>
 <section id="posters" class="full">
@@ -122,6 +126,10 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 
 
 </section>
+</div>
+
+	  
+<div class="container">
 	
 		
 
