--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -82,7 +82,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 		<span>Please click on each image for more info!</span>
 	</header>
 			  <section STYLE="BACKGROUND:TRANSPARENT;">
-  <lis style="background-color: gradientTop;">
+  <lis style="background-color: #3b3841;">
 		<div class="container" style="margin-left:auto; margin-right:auto; bottom:10px; outline:0px; border:0px; BACKGROUND:TRANSPARENT;" border="33333;">
 				<a href="#publication">Publication Design</a>
 				<a href="#posters" color="border">Poster Design</a>
