--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -72,15 +72,15 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	
 
 
+	<header style="background:transparent;"> 
+		<span>Please click on each image for more info!</span>
+	</header>
 	  
 <div class="container">
 	
 
 	
 <section id="publication" class="full">
-	<header style="background:transparent;"> 
-		<span>Please click on each image for more info!</span>
-	</header>
 			  <section STYLE="BACKGROUND:TRANSPARENT;">
   <lis style="background-color: #3b3841;">
 		<div class="container" style="margin-left:auto; margin-right:auto; bottom:10px; outline:0px; border:0px; BACKGROUND:TRANSPARENT;" border="33333;">
@@ -90,7 +90,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 		</div></lis></section>
 	
 	<header style="background:transparent;"> 
-		<span>Please click on each image for more info!</span>
+		<span>Publication Design</span>
 	</header>
 <img src="https://files.catbox.moe/lpi14k.png" onclick="openModal();currentSlide(1)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
 	
