--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -123,7 +123,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
   
   <img src="https://files.catbox.moe/vcreqd.png" onclick="openModal();currentSlide(9)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
 	
-<!--  <img src="" onclick="openModal();currentSlide(10)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;"> -->
+  <img src="" onclick="openModal();currentSlide(10)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
 
 
 </section>
@@ -161,8 +161,6 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	
 	<p></p>
 
-
-<!-- WAR ON POVERTY -->
 
             <div id="myModal" class="modal">
                 <span class="close cursor" onclick="closeModal()">&times;</span>
@@ -240,7 +238,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                         </div>
                     </div>
 
-<!-- KREMA EXHIB -->
+			
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/x3rq3n.png" style="width: 80%; position: relative;">
@@ -253,7 +251,6 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                             <p style="position: relative; bottom: 80px ;"></p>
 			</div>
 			
-<!-- CDP ASSIGNMENTS -->
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/io9v9y.jpg" style="width: 80%; position: relative;">
