--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -83,7 +83,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 <section id="publication" class="full">
 			  <section STYLE="BACKGROUND:TRANSPARENT;">
   <lis style="background-color: #3b3841;">
-		<div class="container" style="margin-left:auto; margin-right:auto; bottom:10px; outline:0px; border:0px; BACKGROUND:TRANSPARENT;" border="33333;">
+		<div class="container" style="margin-left:auto; margin-right:auto; bottom:10px; BACKGROUND:TRANSPARENT;" border="33333;">
 				<a href="#publication" style=background-color:#3b3841;>Publication Design</a>
 				<a href="#posters" style=background-color:#3b3841;>Poster Design</a>
 				<a href="#branding" style=background-color:#3b3841;>Branding</a>
