--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -122,8 +122,6 @@ captionText.innerHTML = dots[slideIndex-1].alt;
   <img src="https://files.catbox.moe/j1pnr6.png" onclick="openModal();currentSlide(8)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
   
   <img src="https://files.catbox.moe/vcreqd.png" onclick="openModal();currentSlide(9)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
-	
-  <img src="" onclick="openModal();currentSlide(10)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
 
 
 </section>
@@ -151,7 +149,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
   
   <img src="https://files.catbox.moe/tynxvh.png" onclick="openModal();currentSlide(15)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
 <p></p>
-	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR0nj8XT6Cs5YfnFi7_2OdAuyBB8dFZ8lQtlV167hunn2tvsFCyPKti9nlf9ESVoP07Q2e82aoTctRd/pubembed?start=true&loop=false&delayms=15000" onclick="openModal();currentSlide(16)" frameborder="0" width="600" height="300" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR0nj8XT6Cs5YfnFi7_2OdAuyBB8dFZ8lQtlV167hunn2tvsFCyPKti9nlf9ESVoP07Q2e82aoTctRd/pubembed?start=true&loop=false&delayms=15000" frameborder="0" width="600" height="300" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 	
 	
 
@@ -294,12 +292,6 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/tynxvh.png" style="width: 80%; position: relative;">
-                            <p style="position: relative; bottom: 80px ;"></p>
-                        </div>
-                    </div>
-                    <div class="mySlides">
-                        <div class="center">
-                            	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR0nj8XT6Cs5YfnFi7_2OdAuyBB8dFZ8lQtlV167hunn2tvsFCyPKti9nlf9ESVoP07Q2e82aoTctRd/pubembed?start=true&loop=false&delayms=15000" frameborder="0" width="400" height="200" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" style="position: relative;"></iframe>
                             <p style="position: relative; bottom: 80px ;"></p>
                         </div>
                     </div>
