--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
  <div class=sidebyside>
     <a class="tooltipster"
   title="Dolls" href="/Dolls">
-  <imglink src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 33.33%; height: 300px; float:left;"></a>
+  <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 33.33%; height: 300px; float:left;"></a>
     <a class="tooltipster"
   title="Graphic Design" href="/GraphicDesign">
-  <imglink src="https://files.catbox.moe/ue8wu0.png" width="33.33%" style="object-fit:cover; width: 33.33%; height: 300px; float:left;"></a>
+  <img src="https://files.catbox.moe/ue8wu0.png" width="33.33%" style="object-fit:cover; width: 33.33%; height: 300px; float:left;"></a>
     <a class="tooltipster"
   title="UI/UX design" href="/WebDesign">
-  <imglink src="https://files.catbox.moe/gvcsfc.png" width="33.33%" style="object-fit:cover; width: 33.33%; height: 300px; float:left;"></a>
+  <img src="https://files.catbox.moe/gvcsfc.png" width="33.33%" style="object-fit:cover; width: 33.33%; height: 300px; float:left;"></a>
     <a class="tooltipster"
   title="Traditional Art" href="/Traditional">
-  <imglink src="https://files.catbox.moe/la65t0.jpeg" width="33.33%" style="object-fit:cover; width: 33.33%; height: 300px; float:left;"></a>
+  <img src="https://files.catbox.moe/la65t0.jpeg" width="33.33%" style="object-fit:cover; width: 33.33%; height: 300px; float:left;"></a>
      
   
 
