--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
    <ul>
   <li><a href="https://www.linkedin.com/in/erika-ornelas-a9613b298/">LinkedIn</a></li>
-  <li><a class="shake" href="/Contact">Contact</a></li>
+  <li><a href="/Contact">Contact</a></li>
   <li><a href="/About">About</a></li>
   <li><a href="/">Home</a></li>
 </ul>
@@ -60,6 +60,7 @@
  <div class=sidebyside>
     <a class="tooltipster"
   title="Dolls" href="/Dolls">
+	    <div id="grad1" width="33.33%" height="300px">
   <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 33.33%; height: 300px; float:left;"></a>
     <a class="tooltipster"
   title="Graphic Design" href="/GraphicDesign">
