--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
  <div class=sidebyside>
     <a class="tooltipster"
   title="Dolls" href="/Dolls">
-	    <div id="grad1" width="33.33%" height="300px">
   <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 33.33%; height: 300px; float:left;"></a>
+	    <div id="grad1" style="position:absolute;" width="33.33%" height="300px">
     <a class="tooltipster"
   title="Graphic Design" href="/GraphicDesign">
   <img src="https://files.catbox.moe/ue8wu0.png" width="33.33%" style="object-fit:cover; width: 33.33%; height: 300px; float:left;"></a>
