--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -16,7 +16,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Bagel+Fat+One&family=DM+Serif+Text:ital@0;1&family=Lexend:wght@100..900&display=swap" rel="stylesheet">
 </head>
-  <script>
+ 
+<script>
 function openModal() {
     document.getElementById("myModal").style.display = "block";
 }
@@ -301,7 +302,9 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 
 <div class="caption-container">
 <p id="caption"></p>
-	
+</div>
+</section>
+
 </div>
 </div>
 </div>
