--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -71,7 +71,14 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	 <h1 style="left:10%;"><i>Erika Ornelas</I></h1>
 
 	
-
+	
+<div class=subnavcontainer>
+  <ul style="float:none;">
+  <li><a href="#custom-AG">Customized 18" Dolls</a></li>
+  <li><a href="#Custom-12">Customized 12" Dolls</a></li>
+  <li><a href="#Vanya">Hand-made Dolls</a></li>
+</ul>
+</div>
 
 	<header style="background:transparent;"> 
 		<span>Please click on each image for more info!</span>
