--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -74,9 +74,9 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	
 <div class=subnavcontainer>
   <ul style="float:none;">
-  <li><a href="#custom-AG">Customized 18" Dolls</a></li>
-  <li><a href="#Custom-12">Customized 12" Dolls</a></li>
-  <li><a href="#Vanya">Hand-made Dolls</a></li>
+  <li><a href="#publication">Publication Design</a></li>
+  <li><a href="#posters">Poster Design</a></li>
+  <li><a href="#branding">Branding</a></li>
 </ul>
 </div>
 
@@ -89,13 +89,6 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 
 	
 <section id="publication" class="full">
-			  <section STYLE="BACKGROUND:TRANSPARENT;">
-  <lis style="background-color: #3b3841;">
-		<div class="container" style="margin-left:auto; margin-right:auto; outline:0px; bottom:10px; BACKGROUND:TRANSPARENT;" border="33333;">
-				<a href="#publication" style=background-color:#3b3841; margin:2px; border-radius 5px;>Publication Design</a>
-				<a href="#posters" style=background-color:#3b3841; margin:2px; border-radius 5px;>Poster Design</a>
-				<a href="#branding" style=background-color:#3b3841; margin:2px; border-radius 5px;>Branding</a>
-		</div></lis></section>
 	
 	<header style="background:transparent;"> 
 		<span>Publication Design</span>
