--- a/Dolls.html
+++ b/Dolls.html
@@ -71,7 +71,7 @@
 <section id="Custom-12" class="full">
 
   
-  <img src="https://files.catbox.moe/izklia.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  <img src="https://files.catbox.moe/izklia.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;" title="2022">
   
 
 	 <h2>Honey</h2>
@@ -82,15 +82,10 @@
 	 <p></p>
  </div>
 </div>
-</section>
-	
-	<div class="container">
-
-<div class="sidebyside">
 	
 <section class="full">
   
-  <img src="https://files.catbox.moe/csbxw9.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  <img src="https://files.catbox.moe/csbxw9.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;" title="2022">
   
  
 	 <h2>null</h2>
