--- a/Dolls.html
+++ b/Dolls.html
@@ -131,5 +131,161 @@
 
 	<footer>
 </footer>
+
+	          <div id="myModal" class="modal">
+                <span class="close cursor" onclick="closeModal()">&times;</span>
+                <div class="modal-content">
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="https://files.catbox.moe/lpi14k.png" style="width: 80%; margin-left:auto; margin-right:auto; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"> <h2>Wage the War on Poverty</h2>
+	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
+	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
+	<br>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
+		<p>
+			On a more self-indulgent note, i <u>love</u> the accent font i used for the title and subheadings.
+		</p>
+                        </div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="https://files.catbox.moe/1h3enc.png" style="width: 80%; position: relative; margin-left:auto; margin-right:auto;">
+                            <p style="position: relative; bottom: 80px ;"> <h2>Wage the War on Poverty</h2>
+	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
+	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
+	<br>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
+		<p>
+			On a more self-indulgent note, i <u>love</u> the accent font i used for the title and subheadings.
+		</p>
+                        </div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="https://files.catbox.moe/oyolz0.png" style="width: 80%; position: relative; margin-left:auto; margin-right:auto;">
+                            <p style="position: relative; bottom: 80px ;"><h2>Wage the War on Poverty</h2>
+	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
+	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
+	<br>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
+		<p>
+			On a more self-indulgent note, i <u>love</u> the accent font i used for the title and subheadings.
+		</p>
+                        </div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="https://files.catbox.moe/yocv3v.png" style="width: 80%; position: relative; margin-left:auto; margin-right:auto;">
+                            <p style="position: relative; bottom: 80px ;"><h2>Wage the War on Poverty</h2>
+	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
+	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
+	<br>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
+		<p>
+			On a more self-indulgent note, i <u>love</u> the accent font i used for the title and subheadings.
+		</p>
+                        </div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="https://files.catbox.moe/r9hrw2.png" style="width: 80%; position: relative; margin-left:auto; margin-right:auto;">
+                            <p style="position: relative; bottom: 80px ;"><h2>Wage the War on Poverty</h2>
+	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
+	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
+	<br>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
+		<p>
+			On a more self-indulgent note, i <u>love</u> the accent font i used for the title and subheadings.
+		</p>
+                        </div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="https://files.catbox.moe/okn633.png" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"><h2>Wage the War on Poverty</h2>
+	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
+	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
+	<br>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
+		<p>
+			On a more self-indulgent note, i <u>love</u> the accent font i used for the title and subheadings.
+		</p>
+                        </div>
+                    </div>
+
+			
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="https://files.catbox.moe/x3rq3n.png" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"></p>
+                        </div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="https://files.catbox.moe/j1pnr6.png" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"></p>
+			</div>
+			
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="https://files.catbox.moe/io9v9y.jpg" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"></p>
+                        </div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"></p>
+                        </div>
+                    </div>
+
+
+
+
+			    
+	<script>
+function openModal() {
+    document.getElementById("myModal").style.display = "block";
+}
+
+function closeModal() {
+    document.getElementById("myModal").style.display = "none";
+}
+
+var slideIndex = 1;
+showSlides(slideIndex);
+
+function plusSlides(n) {
+    showSlides(slideIndex += n);
+}
+
+function currentSlide(n) {
+    showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+var i;
+var slides = document.getElementsByClassName("mySlides");
+var dots = document.getElementsByClassName("demo");
+var captionText = document.getElementById("caption");
+if (n > slides.length) {slideIndex = 1}
+if (n < 1) {slideIndex = slides.length}
+for (i = 0; i < slides.length; i++) {
+slides[i].style.display = "none";
+}
+for (i = 0; i < dots.length; i++) {
+dots[i].className = dots[i].className.replace(" active", "");
+}
+slides[slideIndex-1].style.display = "block";
+dots[slideIndex-1].className += " active";
+captionText.innerHTML = dots[slideIndex-1].alt;
+}
+</script>
+  <a class="prev" onclick="plusSlides(-1)">&#10094</a>
+<a class="next" onclick="plusSlides(1)">&#10095</a>
+
+<div class="caption-container">
+<p id="caption"></p>
+</div>
+</section>
+
+</div>
+</div>
+</div>
 </body>		  
 </html>
