--- a/Dolls.html
+++ b/Dolls.html
@@ -49,11 +49,11 @@
 <section id="Vanya" class="full">
 
   
-  <img src="https://files.catbox.moe/mkym3w.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  <img src="https://files.catbox.moe/mkym3w.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/w2bryr.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  <img src="https://files.catbox.moe/w2bryr.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/pa4bus.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;">
+  <img src="https://files.catbox.moe/pa4bus.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
 	
 	
 	 <h2>Vanya - 16" Bisque Doll</h2>
@@ -71,7 +71,7 @@
 <section id="Custom-12" class="full">
 
   
-  <img src="https://files.catbox.moe/izklia.jpg" width="33.33%" style="object-fit:cover; width: 300px; height: 300px; float:left;" title="2022">
+  <img src="https://files.catbox.moe/izklia.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;"> title="2022">
   
 
 	 <h2>Honey</h2>
@@ -137,8 +137,8 @@
                 <div class="modal-content">
                     <div class="mySlides">
                         <div class="center">
-                            <img src="https://files.catbox.moe/lpi14k.png" style="width: 80%; margin-left:auto; margin-right:auto; position: relative;">
-                            <p style="position: relative; bottom: 80px ;"> <h2>Wage the War on Poverty</h2>
+                            <img src="https://files.catbox.moe/mkym3w.jpg" style="width: 80%; margin-left:auto; margin-right:auto; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"> <h2>Vanya - 16" Bisque Doll</h2>
 	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
 	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
 	<br>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
@@ -149,8 +149,8 @@
                     </div>
                     <div class="mySlides">
                         <div class="center">
-                            <img src="https://files.catbox.moe/1h3enc.png" style="width: 80%; position: relative; margin-left:auto; margin-right:auto;">
-                            <p style="position: relative; bottom: 80px ;"> <h2>Wage the War on Poverty</h2>
+                            <img src="https://files.catbox.moe/w2bryr.jpg" style="width: 80%; position: relative; margin-left:auto; margin-right:auto;">
+                            <p style="position: relative; bottom: 80px ;"> <h2>Vanya - 16" Bisque Doll</h2>
 	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
 	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
 	<br>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
@@ -161,8 +161,8 @@
                     </div>
                     <div class="mySlides">
                         <div class="center">
-                            <img src="https://files.catbox.moe/oyolz0.png" style="width: 80%; position: relative; margin-left:auto; margin-right:auto;">
-                            <p style="position: relative; bottom: 80px ;"><h2>Wage the War on Poverty</h2>
+                            <img src="https://files.catbox.moe/pa4bus.jpg" style="width: 80%; position: relative; margin-left:auto; margin-right:auto;">
+                            <p style="position: relative; bottom: 80px ;"><h2>Vanya - 16" Bisque Doll</h2>
 	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
 	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
 	<br>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
@@ -173,7 +173,7 @@
                     </div>
                     <div class="mySlides">
                         <div class="center">
-                            <img src="https://files.catbox.moe/yocv3v.png" style="width: 80%; position: relative; margin-left:auto; margin-right:auto;">
+                            <img src="https://files.catbox.moe/izklia.jpg" style="width: 80%; position: relative; margin-left:auto; margin-right:auto;">
                             <p style="position: relative; bottom: 80px ;"><h2>Wage the War on Poverty</h2>
 	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
 	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
