--- a/Dolls.html
+++ b/Dolls.html
@@ -71,7 +71,7 @@
 <section id="Custom-12" class="full">
 
   
-  <img src="https://files.catbox.moe/izklia.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;"> title="2022">
+  <img src="https://files.catbox.moe/izklia.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;"> 
   
 
 	 <h2>Honey</h2>
@@ -129,8 +129,6 @@
 </div>
 </section>
 
-	<footer>
-</footer>
 
 	          <div id="myModal" class="modal">
                 <span class="close cursor" onclick="closeModal()">&times;</span>
@@ -287,5 +285,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 </div>
 </div>
 </div>
+	<footer>
+</footer>
 </body>		  
 </html>
