--- a/Dolls.html
+++ b/Dolls.html
@@ -92,11 +92,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
   <img src="https://files.catbox.moe/w2bryr.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
   
   <img src="https://files.catbox.moe/pa4bus.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
-	
-	
-	 <h2>Vanya - 16" Bisque Doll</h2>
-	 <p>coming soon!</p>
-	 <p></p>
+
  </div>
 </div>
 </section>
@@ -123,13 +119,11 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	
   
   <img src="https://files.catbox.moe/zsvaet.jpg" onclick="openModal();currentSlide(10)" class="hover-shadow" height="300px" style="object-fit:cover; float:left;">
-	 <h2>null</h2>
-	 <p>coming soon!</p>
-	 <p></p>
+
  </div>
 </div>
 </section>
-	
+	<p></p>
 	<div class="container">
 
 <div class="sidebyside">
@@ -153,7 +147,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                             <img src="https://files.catbox.moe/mkym3w.jpg" style="width: 80%; margin-left:auto; margin-right:auto; position: relative;">
                             <p style="position: relative; bottom: 80px ;"> <h2>Vanya - 16" Bisque Doll</h2>
 	 <p>
-		 This doll was a result of my free periods in my senior year schedue in high school. <p>
+		 This doll was a result of my free periods in my senior year schedule in high school. <p>
 			That year I had finally taken ceramics and wanted to try my hand at making a ball jointed doll. I started with the ball joints and made the holes with straws, I then wrapped each joint with saran wrap once bone dry to help me mold the limbs around the joints.
 		 </p>
 				Making her took about 3 months.
@@ -166,7 +160,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                             <img src="https://files.catbox.moe/w2bryr.jpg" style="width: 80%; position: relative; margin-left:auto; margin-right:auto;">
                             <p style="position: relative; bottom: 80px ;"> <h2>Vanya - 16" Bisque Doll</h2>
 	 <p>
-		 This doll was a result of my free periods in my senior year schedue in high school. <p>
+		 This doll was a result of my free periods in my senior year schedule in high school. <p>
 			That year I had finally taken ceramics and wanted to try my hand at making a ball jointed doll. I started with the ball joints and made the holes with straws, I then wrapped each joint with saran wrap once bone dry to help me mold the limbs around the joints.
 		 </p>
 				Making her took about 3 months.
@@ -179,7 +173,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                             <img src="https://files.catbox.moe/pa4bus.jpg" style="width: 80%; position: relative; margin-left:auto; margin-right:auto;">
                             <p style="position: relative; bottom: 80px ;"><h2>Vanya - 16" Bisque Doll</h2>
 	 <p>
-		 This doll was a result of my free periods in my senior year schedue in high school. <p>
+		 This doll was a result of my free periods in my senior year schedule in high school. <p>
 			That year I had finally taken ceramics and wanted to try my hand at making a ball jointed doll. I started with the ball joints and made the holes with straws, I then wrapped each joint with saran wrap once bone dry to help me mold the limbs around the joints.
 		 </p>
 				Making her took about 3 months.
